Fix layout on mobile

--- a/style.css
+++ b/style.css
@@ -47,9 +47,8 @@ body {
 }
 
 .table-container {
+  flex-grow: 1;
   width: 100%;
-  min-height: 70vh;
-  overflow: auto;
   white-space: nowrap;
   background-color: rgb(20, 20, 20);
 }
@@ -61,10 +60,11 @@ body {
 }
 
 .heading-text {
-  font-size: 5vw;
+  font-size: min(3rem, 5vw);
   font-weight: bolder;
   position: relative;
   text-wrap: nowrap;
+  overflow-y: unset;
 }
 
 .heading-text::after {
@@ -93,34 +93,39 @@ header {
 
 footer {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   width: 100%;
-  min-height: 3rem;
-  border: 2px solid white;
+  min-height: 160px;
+  border: 1px solid white;
+  background-color: rgb(30, 30, 30);
 }
 
-.links {
+.social-link {
   display: flex;
   flex-direction: row;
-  gap: 5rem;
+  gap: 1rem;
   justify-content: center;
+  width: 100%;
+  margin-top: 1.5rem;
 }
 
-.links a {
+.social-link a {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
-.links a img {
-  width: 1rem;
-  height: 1rem;
+.social-link a img {
+  width: 1.8rem;
 }
 
-.links a p {
+.social-link a p {
   text-align: center;
+  font-size: 0.9rem;
+  color: rgb(150, 150, 150);
 }
 
 .table-def {
@@ -155,4 +160,28 @@ footer {
 form {
   display: flex;
   gap: 1rem;
+}
+
+.link {
+  display: flex;
+  margin-top: 1rem;
+  gap: 2rem;
+  justify-content: center;
+}
+
+.link a {
+  font-size: 0.8rem;
+  color: rgb(200, 200, 200);
+}
+
+.copyright {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2rem;
+  text-align: center;
+  font-size: 0.7rem;
+  text-wrap: nowrap;
+  background-color: rgb(10, 10, 10);
+  height: 100%;
 }
